@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST hardlink_0.2.0.tar.gz 12478 SHA256 7dbacfaaaa6bcc090f75511b204b73ca8f9da7816c4e9ea384eee5261aaef8d1 SHA512 963fe90aa09e2bd548722b5c7f047fbd54fddf37967333e86251d7e5d1c646108ce90d78e7efeb8af6b9169b9a0bc5bc8b744afe1e813390f3e0bd535ce22005 WHIRLPOOL 81b4e8724ef5a3a4399546ed3340034babcb77f089599b6d941fba20b993fa5dc5e522805cdc5cb0a57d7481146d72e0b2d164a6a0ac3eccb69ede2ea707b4d7
+DIST hardlink_0.3.0.tar.xz 14440 SHA256 e8c93dfcb24aeb44a75281ed73757cb862cc63b225d565db1c270af9dbb7300f SHA512 22a8945ce5dac74b05bb1231959823aec0cd364d6db9ad808df4acf232d894170c006ac1e88509604ce1859d41bd4a5d91e2b12c8010aa7fc7e19a77922c4486 WHIRLPOOL dcc1aaf3c4e8ac89137d4bb33d03d14689b4d8b193654e66614a99f551977401c406f29a4d903d61f82b9db51402fa6b7e3eaf88c965ce5d0a22408d58b6677a
 EBUILD hardlink-0.2.0.ebuild 1056 SHA256 467837b44fa071e26725b9590fc6ed73a25d42947e63e8d11ea04c2e3410e4e0 SHA512 fcde92010d06c779f837149431d50bd13f80549d31544962716758cb4a39c0274f179619e03208e4369a1fc10b06cb6c9056a849eb71cdfd62387aa643006026 WHIRLPOOL 46c538c5efe887f469a24d158c6bd40a3014d36d91302712eff46d6a849bc0ea7ea615b1925b100a4992389c0465bd2acd18c409871feacccc37c57450a1e468
-MISC ChangeLog 1667 SHA256 d58994055ed90aede37cb935cde187c507b531a565985e12de49cac3e2158934 SHA512 9191f689e4fc294f26cb854fdaa2ba885e7b2308a9dc6fb8b94bc46ffe50d4a86f64cf8f866890277f7f2911ea1748a3f68a611c07cdc5e3d30ac81dc05c2249 WHIRLPOOL b782a762764dfd90d20c63113367bd88d8ac3134b468f90140865e67bd55e54ea79b766d403a0b80681693b3ffd9480f6d15dc096be30eac1d56b2e50d107cfb
+EBUILD hardlink-0.3.0.ebuild 1065 SHA256 c67c3317f6891c1178abe847263d977bda94908f42583c8170387ce910de2f5d SHA512 a1cd9c80ebcbd85475d27ee9c56faee344d24504dc359540e830cc867fb69a864039e7566460770bcd7816f3c6f8e601fbe919528e5acaac098ec32b12fbcc13 WHIRLPOOL 00ef2d0da6cbeab1ffe63eb6163e3454bb062ee5540a5c22848373f2c7b063034e7b68dc0320d2302c8fb40d8000683d02bca5a330695cbce41196d4d7b8b114
+MISC ChangeLog 1796 SHA256 35ac089e00a02481f1a853479589bdfad05ca26d638a194e9003cdc6f2dc4358 SHA512 457c218a2ffc0f8efcfb995df0e0f76dfcb4994a6f02b16b4587053e2dedb2c15d0485cad40573576addd5b9672d84040d5dbfc24838194d9ce70ad82b99dbbb WHIRLPOOL 340b5fa27428f8a1146b5f14a75de18106eb5eb536fcc21f78f857855f016c3809dccb28a189ce051b7c6dc7c264adf5905fd98bf0f3a592859deb69e406f567
 MISC metadata.xml 262 SHA256 dc5206f1a04f33a5ccb832d15ce9ffff9326b078d8178648177ed371bfac9543 SHA512 a8bdac0b5491b3b5b5bd60813338bf2098a755f199f0679bb95f3e6843cc69d012cd51a2e09b69f7cde16b9f7275560e282d3b77c355238773539627cede52b0 WHIRLPOOL f0cdcc087bd4d858c1228c157e97213312a2129bcca0faa8cfcfbae755b545a178ac11c5575de5e8a5b3995cf66b453db538c79c88704b8372c2753654d87500
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTGE2NAAoJELp701BxlEWfbhQP/AuqrzyszzS9Ck/GtnBlHjrk
-oK3Z0qS6SPYXvem2WDQAm/kqWy9gjRql13Xr7UogTx5fTip2XNXaWSDNmXBbSuTf
-0KZPnchVLt3HmkFK1/hQp2M+dFt92fu0PvKvR4M9MSCTcuL0N5/52HMmlevijS9O
-0cKVaTCaVT3kRPHPcQquhojA7JaiaB8D5mqauB2nrKrxiwg64JRUJ6FbMRaauo0e
-RG+a6Xusa+HRW5WwOdQcIpKpF/aGRT3c4WVdeGaE43N7Ayd3xeGjVbamNVgcrUAs
-06lp8O5D62mhiW1jRdk1t1idipbRHyUMOswb6Jfxr686ytIcgoJ6dO8sUnULuVjp
-VBM4V2FqdGB1mH2s9of9RZrN7VedfBeztkDA71zK04EOhDeI287OFX/MTUnKxGxy
-w37svb4SpndFAQCnErljE/d/Z/y4wHtrrbvqyyZxP4Dlr+Ik222Q01xs0ahLnQMM
-mUKTo1kapqjP1AaujdB9BrQKbibhHuga7MFFF6RYjBg8yuKT9uZtsZmmLq585sS2
-ojMSWk/ZAIoWqWPwk4LmUKzD5QdrmJ1IiPxsnVSTYZbDsdrxclaF1kZGWVIekteC
-9bCzWfodYt8QDERBGGcymBGxQy0rdSxIVPqmgrmOVFgiA9wfVbuik4CL2sEeosMp
-3ditato5yWjUELGb0b0Z
-=j3+v
+iQIcBAEBCAAGBQJU0VgxAAoJEHy/RO9cNQiDJtwP/izgVoQrdsdBK8xKk3p1AlDi
+5tHFXq/JT4oscSo+8LC6leLjDbCb3FqgV41rHo7WvjSh0lFX/I57YGnOZUxFCabi
+wusWSTFyNAvS/PTGoB1A6YGrEssPQFMMt/4gHnkHkOifGGULvE0/DGTk8Cd6W7OZ
+qA7tBMsGR+KCN9rQO5cAigM2RrDIbrK3yCzzs8PrsRFY5WFJuEsI7v79Y7xJsyy4
+PI2i+oz8yVDqJp3kD8Ad/yW5+YUqhf6A4OeGwtdLPNc9P/WmVXG52ra1R+h1/uP3
+QrwUc4OR8/d+TnNJlmjApkJC1ww72ikg5iBzul62tbUsvzFw06d2jvzRl3AUnp7u
+jTbBKNvoLE3NSS7fs8HvNjRiCGXYZqYmxKF8V1nflSpuDvtj1Kyv0cyVMIZynnfD
+qUNf5lzrsrqXowsqeRvQUh2pJXnXU8x6bidY3rM2AYsGm3i8Eu92JY65GjrRkhzq
+ujaqG+JwmJOecrfVfeq1KctspAyLdfzTH1nrFYTG1aWS2eAylHDxEx1ak47U5L2W
+BrGQw44tfoC59bMJhjLRFDnWMPIxXf7Z0vtHkXVGjqEUDNuyEPN+qM9MqirnZRPa
+BT7InB57dpm1luqx5RIlvjrkQCeoiWFWCFmvIougVUfWMQ45WVrHspiNldPN5Rth
+SbMlKlWPW8hhPEHCAQ7a
+=fYuW
 -----END PGP SIGNATURE-----
