@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/hardlink
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/hardlink/ChangeLog,v 1.12 2014/03/06 10:27:24 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/hardlink/ChangeLog,v 1.13 2015/02/03 23:22:01 chutzpah Exp $
+
+*hardlink-0.3.0 (03 Feb 2015)
+
+  03 Feb 2015; Patrick McLean <chutzpah@gentoo.org> +hardlink-0.3.0.ebuild:
+  Version bump.
 
   06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> hardlink-0.2.0.ebuild:
   Stable for ppc64, wrt bug #476042
